Fix issue where the browsers scrollbar repositions layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     html {
         @apply font-inter;
         @apply text-semilightblack;
+        overflow-y: scroll;
     }
 }
 
